# WeAsmr

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  icon.rc  qml.qrc
QML/: BaseComponents.qml  Bottomplayer.qml  Content.qml  HoverButton.qml  LeftBar.qml  MessageBox.qml  MusicComponents.qml  ResizeHandle.qml  ScrollBarDrag.qml  SelectCollect.qml  SettingsPopup.qml  Test.qml  TopBar.qml  VShow.qml  main.qml
QML/components/: Aboutme.qml  AudioListItem.qml  EAlertDialog.qml  EMusicPlayer.qml  ETheme.qml  FilePreview.qml  MediaUtils.js  MusicWindow.qml  WebPreview.qml
QML/content/: Aboutme.qml  Asmr_list.qml  BaseShow.qml  Collect.qml  FindMusic.qml  Music.qml  NumberToChinese.qml  SearchShowPage.qml  Study.qml  TcpStudy.qml
QML/control/: AudioControl.qml  PlaybackControl.qml  PlaybackSeekControl.qml  UrlPopup.qml
include/: CursorPosProvider.h  DataMgr.h  DownloadTool.h  DownloadToolMgr.h  NumberToChinese.h  PageMgr.h  TcpClient.h  configMgr.h  downloadm3u8.cpp  downloadm3u8.h  fpscounter.h  logger.h  netMusic.h  netMusic.h.tmp.5436.32532b283809  webAddr.h
server/: CMakeLists.txt  server.json
server/data/: sites.json
server/include/: config.h  site_manager.h
server/src/: config.cpp  main.cpp  site_manager.cpp
sources/jsondata/: collectdata.json
src/: DataMgr.cpp  DownloadTool.cpp  NumberToChinese.cpp  PageMgr.cpp  TcpClient.cpp  fpscounter.cpp  logger.cpp  main.cpp  music.cpp  netMusic.cpp
